	* config.vcxproj, src/ds390/ds390.vcxproj,
	  src/hc08/hc08.vcxproj, src/mcs51/mcs51.vcxproj,
	  src/pic14/pic14.vcxproj, src/pic16/pic16.vcxproj,
	  src/sdcc.vcxproj, src/yacc.vcxproj, src/z80/z80.vcxproj:
	  VS project enhancements
	* src/SDCC.y, src/SDCCsymt.h, src/SDCCutil.c, src/SDCCutil.h,
	  src/SDCCval.c: fixed flaws in previous commit

2012-03-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (aopGet, aopPut),
	* src/mcs51/gen.c (aopGet, aopPut): fixed bug 3496842
	* support/regression/tests/sfr16.c: enabled test and fixed for ds390

2012-03-17 Borut Razem <borut.razem AT gmail.com>

	* support/regression/tests/strstr.c,
	  support/regression/tests/strcpy.c,
	  support/regression/tests/strcmp.c,
	  support/regression/tests/strtok.c,
	  support/regression/tests/strncmp.c,
	  support/regression/tests/strspn.c,
	  support/regression/tests/strpbrk.c,
	  support/regression/tests/string.c:
	  merged strstr.c, strcpy.c, strcmp.c, strtok.c, strncmp.c,
	  strspn.c, and strpbrk.c to string.c, added test for
	  bug #3506236

2012-03-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/linksrc/lkarea.c (lnksect2): applied fix from Tim Schuerewegen
	  (bug 3495316)

2012-03-16 Borut Razem <borut.razem AT gmail.com>

	* sdcc.sln, src\sdcc.vcxproj, src\sdcc.vcxproj.filters,
	  src\yacc.vcxproj:
	  project src renamed to sdcc, removed project yacc
	* doc\sdccman.lyx, src\SDCCasm.c, src\SDCCicode.h,
	  src\SDCCast.c, src\SDCCast.h, src\pic16\main.c:
	  implemeted pragma config for pic16 target, solution
	  of bug #3486890 - pic16 port config directive warning
	* src/Makefile.in, src/sdcc.vcxproj:
	  fixed bug #3506236: sdcc.exe unicode problem? by generating
	  8-bit scanner

2012-03-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/linksrc/lkarea.c (allocate_space,find_empty_space): fixed bound
	  checking errors on allocation bitmap (possbile fix for bug #3502626)

2012-03-16 Raphael Neider <rneider AT web.de>
